# electrorotation-game

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/_static/video/: rot_game.webm
examples/: rot_game.yaml
src/rot_game/: __init__.py  assets.py  catalog.py  cli.py  config.py  exporters.py  scaffold.py  settings.py
src/rot_game/core/: feather.py  noise.py  renderer.py  scaling.py  schedule.py  trajectory.py
src/rot_game/gui/: __init__.py  app.py
src/rot_game/gui/canvas/: __init__.py  handle_manager.py  pixmap_utils.py  preview_controller.py  thumbnail_manager.py  trajectory_renderer.py
src/rot_game/gui/controllers/: __init__.py  asset_controller.py  cell_controller.py  config_controller.py  schedule_controller.py
src/rot_game/gui/models/: __init__.py  cell.py  edge_feather.py  schedule.py  selection.py  state.py
src/rot_game/gui/utils/: __init__.py  colors.py  radius.py
src/rot_game/gui/widgets/: __init__.py  asset_browser.py  cell_inspector.py  delegates.py  mask_editor_dialog.py  schedule_table.py  schedule_timeline.py
src/rot_game/plugins/: __init__.py
